[gd_scene load_steps=4 format=3 uid="uid://buo5k04wdm5ql"]

[ext_resource type="Script" path="res://scripts/ComponentMenu.gd" id="1_64b2g"]

[sub_resource type="LabelSettings" id="LabelSettings_fv5sy"]
font_size = 22

[sub_resource type="LabelSettings" id="LabelSettings_2i5vm"]
font_size = 11

[node name="ComponentMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1190.0
offset_top = 7.0
offset_right = 297.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_64b2g")

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = 16.0
offset_right = 245.0
offset_bottom = 653.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_left = -13.0
offset_right = 240.0
offset_bottom = 694.0

[node name="ApiInput" type="LineEdit" parent="Control"]
layout_mode = 0
offset_left = 8.0
offset_top = 87.0
offset_right = 176.0
offset_bottom = 118.0
pivot_offset = Vector2(16, -40)

[node name="Label" type="Label" parent="Control/ApiInput"]
layout_mode = 0
offset_top = -32.0
offset_right = 58.0
offset_bottom = -6.0
text = "API Key"

[node name="closeButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 185.0
offset_top = 14.0
offset_right = 216.0
offset_bottom = 45.0
text = "X
"

[node name="ComponentNameLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 5.0
offset_top = 11.0
offset_right = 134.0
offset_bottom = 50.0
text = "Placeholder"
label_settings = SubResource("LabelSettings_fv5sy")

[node name="NewNameInput" type="LineEdit" parent="Control"]
layout_mode = 0
offset_left = 4.0
offset_top = 11.0
offset_right = 135.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 12
placeholder_text = "Nieuwe Naam (Enter)"
flat = true

[node name="InvisNameChangeButton" type="Button" parent="Control"]
layout_mode = 0
offset_top = 7.0
offset_right = 174.0
offset_bottom = 55.0
flat = true

[node name="setApiButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 184.0
offset_top = 87.0
offset_right = 217.0
offset_bottom = 118.0
text = "Set"

[node name="HTTPRequest" type="HTTPRequest" parent="Control/setApiButton"]

[node name="verwijderButton" type="Button" parent="Control"]
visible = false
layout_mode = 0
offset_left = 964.0
offset_top = 724.0
offset_right = 1077.0
offset_bottom = 755.0
text = "Verwijderen"

[node name="apiErrorLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 8.0
offset_top = 130.0
offset_right = 176.0
offset_bottom = 153.0
text = "Invalid API key"
label_settings = SubResource("LabelSettings_2i5vm")

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 8.0
offset_top = 175.0
offset_right = 131.0
offset_bottom = 201.0
pivot_offset = Vector2(491, 274)
text = "API Information"

[node name="apiSuccesLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 8.0
offset_top = 130.0
offset_right = 189.0
offset_bottom = 153.0
text = "API allocation has been successful"
label_settings = SubResource("LabelSettings_2i5vm")

[node name="ApiOutput" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 8.0
offset_top = 210.0
offset_right = 217.0
offset_bottom = 537.0

[connection signal="pressed" from="Control/closeButton" to="." method="_on_close_button_pressed"]
[connection signal="text_submitted" from="Control/NewNameInput" to="." method="_on_new_name_input_text_submitted"]
[connection signal="button_down" from="Control/InvisNameChangeButton" to="." method="_on_invis_name_change_button_button_down"]
[connection signal="pressed" from="Control/setApiButton" to="." method="_on_set_api_button_pressed"]
[connection signal="request_completed" from="Control/setApiButton/HTTPRequest" to="." method="_on_http_request_request_completed"]
